src/test/deca/context/valid/created/testInitVar/newObject.deca
// Description :
//    Test de l'affichage d'une variable float résultant d'une opération arithmétique
//
// Résultats :
//    ok

{
    Object o = new Object();
}